[gd_scene load_steps=15 format=3 uid="uid://cfyvkq6qklwnv"]

[ext_resource type="PackedScene" uid="uid://bc387eb0njapq" path="res://scenes/ui_scene.tscn" id="1_gib3a"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="2_knfle"]
[ext_resource type="Texture2D" uid="uid://23nyjq16jr2l" path="res://textures/Splashscreens/Menu.png" id="3_nk4c3"]
[ext_resource type="Texture2D" uid="uid://bfgrpioyr77fp" path="res://textures/Splashscreens/menu_start.png" id="4_24xt1"]
[ext_resource type="Texture2D" uid="uid://mcs6ppsq2k6n" path="res://textures/Splashscreens/menu_credits.png" id="5_f08nl"]
[ext_resource type="Texture2D" uid="uid://dp778mlqs3t23" path="res://textures/Splashscreens/menu_exit.png" id="6_d58kf"]
[ext_resource type="Shader" path="res://shaders/film_grain.gdshader" id="7_e1ras"]
[ext_resource type="Script" path="res://scripts/keep_aspect_control.gd" id="7_uuih3"]

[sub_resource type="PlaneMesh" id="PlaneMesh_uur46"]
size = Vector2(16, 9)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8xkxi"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.831373, 0.831373, 0.831373, 1)
albedo_texture = ExtResource("3_nk4c3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_stc1v"]
render_priority = 2
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("4_24xt1")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8ityx"]
render_priority = 2
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("5_f08nl")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rtnc0"]
render_priority = 2
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("6_d58kf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wi2tv"]
shader = ExtResource("7_e1ras")
shader_parameter/projector_power = 0.033
shader_parameter/vignette_param = 20.0

[node name="main_menu" instance=ExtResource("1_gib3a")]
script = ExtResource("2_knfle")

[node name="game_viewport_container" parent="." index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="game_viewport" parent="game_viewport_container" index="0"]
size = Vector2i(1600, 900)

[node name="menu_background" type="MeshInstance3D" parent="game_viewport_container/game_viewport/world" index="1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -14.2249)
mesh = SubResource("PlaneMesh_uur46")
surface_material_override/0 = SubResource("StandardMaterial3D_8xkxi")

[node name="menu_start" type="MeshInstance3D" parent="game_viewport_container/game_viewport/world" index="2"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -14.225)
mesh = SubResource("PlaneMesh_uur46")
surface_material_override/0 = SubResource("StandardMaterial3D_stc1v")

[node name="menu_credits" type="MeshInstance3D" parent="game_viewport_container/game_viewport/world" index="3"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -14.225)
visible = false
mesh = SubResource("PlaneMesh_uur46")
surface_material_override/0 = SubResource("StandardMaterial3D_8ityx")

[node name="menu_exit" type="MeshInstance3D" parent="game_viewport_container/game_viewport/world" index="4"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -14.225)
visible = false
mesh = SubResource("PlaneMesh_uur46")
surface_material_override/0 = SubResource("StandardMaterial3D_rtnc0")

[node name="overlay" type="Control" parent="." index="2"]
anchors_preset = 0
offset_right = 1600.0
offset_bottom = 900.0
script = ExtResource("7_uuih3")

[node name="grain" type="ColorRect" parent="overlay" index="0"]
material = SubResource("ShaderMaterial_wi2tv")
layout_mode = 0
offset_left = 563.0
offset_top = 98.0
offset_right = 1490.0
offset_bottom = 762.0
